--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "~4.1.1",
     "et-line": "~1.0.1",
     "font-awesome": "~4.7.0",
+    "freshchat-widget": "1.0.4",
     "gatsby": "1.9.266",
     "gatsby-image": "1.0.51",
     "gatsby-link": "1.6.44",
