--- a/package.json
+++ b/package.json
@@ -5,39 +5,39 @@
   "author": "Ledgy AG <contact@ledgy.com>",
   "repository": "morloy/ledgy-app",
   "dependencies": {
-    "@babel/core": "7.0.0-beta.49",
-    "@babel/preset-env": "7.0.0-beta.49",
-    "@babel/preset-flow": "7.0.0-beta.49",
-    "@babel/preset-react": "7.0.0-beta.49",
-    "@lingui/react": "2.0.8",
-    "aos": "~2.3.0",
-    "bootstrap": "~4.1.1",
-    "et-line": "~1.0.1",
-    "font-awesome": "~4.7.0",
+    "@babel/core": "7.0.0-beta.51",
+    "@babel/preset-env": "7.0.0-beta.51",
+    "@babel/preset-flow": "7.0.0-beta.51",
+    "@babel/preset-react": "7.0.0-beta.51",
+    "@lingui/react": "2.1.2",
+    "aos": "2.3.1",
+    "bootstrap": "4.1.1",
+    "et-line": "1.0.1",
+    "font-awesome": "4.7.0",
     "freshchat-widget": "1.0.4",
-    "gatsby": "1.9.266",
-    "gatsby-image": "1.0.51",
-    "gatsby-link": "1.6.44",
-    "gatsby-plugin-google-tagmanager": "~1.0.17",
-    "gatsby-plugin-manifest": "1.0.24",
+    "gatsby": "1.9.273",
+    "gatsby-image": "1.0.54",
+    "gatsby-link": "1.6.45",
+    "gatsby-plugin-google-tagmanager": "1.0.19",
+    "gatsby-plugin-manifest": "1.0.27",
     "gatsby-plugin-netlify": "1.0.21",
-    "gatsby-plugin-nprogress": "~1.0.14",
+    "gatsby-plugin-nprogress": "1.0.14",
     "gatsby-plugin-offline": "1.0.18",
-    "gatsby-plugin-react-helmet": "~2.0.10",
-    "gatsby-plugin-react-next": "~1.0.10",
-    "gatsby-plugin-sass": "~1.0.25",
-    "gatsby-plugin-sharp": "1.6.46",
+    "gatsby-plugin-react-helmet": "2.0.11",
+    "gatsby-plugin-react-next": "1.0.11",
+    "gatsby-plugin-sass": "1.0.26",
+    "gatsby-plugin-sharp": "1.6.48",
     "gatsby-plugin-sitemap": "1.2.25",
-    "gatsby-source-filesystem": "1.5.38",
-    "gatsby-transformer-sharp": "1.6.26",
-    "jquery": "~3.3.1",
-    "lity": "~2.3.0",
-    "lodash": "~4.17.5",
-    "popper.js": "~1.14.3",
-    "react": "~16.4.0",
-    "react-dom": "~16.4.0",
-    "react-helmet": "~5.2.0",
-    "slick-carousel": "~1.8.1"
+    "gatsby-source-filesystem": "1.5.39",
+    "gatsby-transformer-sharp": "1.6.27",
+    "jquery": "3.3.1",
+    "lity": "2.3.1",
+    "lodash": "4.17.10",
+    "popper.js": "1.14.3",
+    "react": "16.4.1",
+    "react-dom": "16.4.1",
+    "react-helmet": "5.2.0",
+    "slick-carousel": "1.8.1"
   },
   "keywords": [
     "ledgy"
@@ -71,17 +71,17 @@
     }
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "7.0.0-beta.49",
-    "@lingui/babel-preset-react": "2.0.8",
-    "@lingui/cli": "2.0.8",
-    "babel-eslint": "~8.2.3",
-    "eslint": "~4.19.1",
-    "eslint-config-airbnb": "~16.1.0",
-    "eslint-plugin-flowtype": "~2.48.0",
-    "eslint-plugin-import": "~2.12.0",
-    "eslint-plugin-jsx-a11y": "~6.0.3",
-    "eslint-plugin-react": "~7.8.2",
-    "flow-bin": "~0.73.0",
+    "@babel/plugin-proposal-class-properties": "7.0.0-beta.51",
+    "@lingui/babel-preset-react": "2.1.2",
+    "@lingui/cli": "2.1.2",
+    "babel-eslint": "8.2.3",
+    "eslint": "4.19.1",
+    "eslint-config-airbnb": "16.1.0",
+    "eslint-plugin-flowtype": "2.49.3",
+    "eslint-plugin-import": "2.12.0",
+    "eslint-plugin-jsx-a11y": "6.0.3",
+    "eslint-plugin-react": "7.9.1",
+    "flow-bin": "0.75.0",
     "i18next-conv": "6.0.1"
   },
   "lingui": {
