--- a/package.json
+++ b/package.json
@@ -5,12 +5,9 @@
   "author": "Ledgy AG <contact@ledgy.com>",
   "repository": "morloy/ledgy-app",
   "dependencies": {
-    "@babel/core": "7.0.0-rc.1",
-    "@babel/preset-env": "7.0.0-rc.1",
-    "@babel/preset-flow": "7.0.0-rc.1",
-    "@babel/preset-react": "7.0.0-rc.1",
-    "@lingui/react": "2.4.1",
+    "@lingui/react": "2.7.0",
     "aos": "2.3.3",
+    "babel-core": "6.26.3",
     "bootstrap": "4.1.2",
     "et-line": "1.0.1",
     "font-awesome": "4.7.0",
@@ -34,8 +31,8 @@
     "lity": "2.3.1",
     "lodash": "4.17.10",
     "popper.js": "1.14.4",
-    "react": "16.4.2",
-    "react-dom": "16.4.2",
+    "react": "16.5.0",
+    "react-dom": "16.5.0",
     "react-helmet": "5.2.0",
     "slick-carousel": "1.8.1"
   },
@@ -71,10 +68,14 @@
     }
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "7.0.0-rc.1",
-    "@lingui/babel-preset-react": "2.4.1",
-    "@lingui/cli": "2.4.1",
+    "@lingui/babel-preset-react": "2.7.0",
+    "@lingui/cli": "2.7.0",
     "babel-eslint": "8.2.6",
+    "babel-plugin-macros": "2.4.0",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-preset-flow": "6.23.0",
+    "babel-preset-react": "6.24.1",
     "eslint": "4.19.1",
     "eslint-config-airbnb": "16.1.0",
     "eslint-plugin-flowtype": "2.50.0",
