--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,8 @@ node_modules
 public
 .DS_Store
 yarn-error.log
+
+*.mo
 src/locale/_build/
-src/locale/de.po
+src/locale/de/messages.js
+src/locale/en/messages.js
