--- a/package.json
+++ b/package.json
@@ -13,33 +13,34 @@
     "extract": "lingui extract --clean"
   },
   "dependencies": {
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0",
     "@lingui/react": "2.7.0",
     "aos": "2.3.3",
-    "babel-core": "6.26.3",
-    "bootstrap": "4.1.2",
+    "babel-core": "7.0.0-bridge.0",
+    "bootstrap": "4.1.3",
     "et-line": "1.0.1",
     "font-awesome": "4.7.0",
-    "gatsby": "1.9.277",
-    "gatsby-image": "1.0.55",
-    "gatsby-link": "1.6.46",
-    "gatsby-plugin-google-tagmanager": "1.0.19",
-    "gatsby-plugin-manifest": "1.0.27",
-    "gatsby-plugin-netlify": "1.0.21",
-    "gatsby-plugin-nprogress": "1.0.14",
-    "gatsby-plugin-offline": "1.0.18",
-    "gatsby-plugin-react-helmet": "2.0.11",
-    "gatsby-plugin-react-next": "1.0.11",
-    "gatsby-plugin-sass": "1.0.26",
-    "gatsby-plugin-sharp": "1.6.48",
-    "gatsby-plugin-sitemap": "1.2.25",
-    "gatsby-source-filesystem": "1.5.39",
-    "gatsby-transformer-sharp": "1.6.27",
+    "gatsby": "2.0.8",
+    "gatsby-image": "2.0.9",
+    "gatsby-link": "2.0.1",
+    "gatsby-plugin-flow": "1.0.1",
+    "gatsby-plugin-google-tagmanager": "2.0.5",
+    "gatsby-plugin-manifest": "2.0.3",
+    "gatsby-plugin-netlify": "2.0.0",
+    "gatsby-plugin-nprogress": "2.0.5",
+    "gatsby-plugin-offline": "2.0.5",
+    "gatsby-plugin-react-helmet": "3.0.0",
+    "gatsby-plugin-sass": "2.0.1",
+    "gatsby-plugin-sharp": "2.0.5",
+    "gatsby-plugin-sitemap": "2.0.1",
+    "gatsby-source-filesystem": "2.0.1",
+    "gatsby-transformer-sharp": "2.1.2",
     "jquery": "3.3.1",
     "lity": "2.3.1",
-    "lodash": "4.17.10",
+    "lodash": "4.17.11",
     "popper.js": "1.14.4",
-    "react": "16.5.0",
-    "react-dom": "16.5.0",
+    "react": "16.5.2",
+    "react-dom": "16.5.2",
     "react-helmet": "5.2.0",
     "slick-carousel": "1.8.1"
   },
@@ -69,20 +70,14 @@
   "devDependencies": {
     "@lingui/babel-preset-react": "2.7.0",
     "@lingui/cli": "2.7.0",
-    "babel-eslint": "8.2.6",
-    "babel-plugin-macros": "2.4.0",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-preset-flow": "6.23.0",
-    "babel-preset-react": "6.24.1",
-    "eslint": "4.19.1",
-    "eslint-config-airbnb": "16.1.0",
-    "eslint-plugin-flowtype": "2.50.0",
+    "babel-eslint": "9.0.0",
+    "eslint": "5.6.0",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-plugin-flowtype": "2.50.1",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
-    "eslint-plugin-react": "7.10.0",
-    "flow-bin": "0.78.0",
-    "i18next-conv": "6.0.1"
+    "eslint-plugin-react": "7.11.1",
+    "flow-bin": "0.81.0"
   },
   "lingui": {
     "fallbackLocale": "en",
