--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@lingui/react": "2.7.0",
     "aos": "2.3.3",
     "babel-core": "7.0.0-bridge.0",
-    "bootstrap": "4.1.3",
+    "bootstrap": "4.1.2",
     "et-line": "1.0.1",
     "font-awesome": "4.7.0",
     "gatsby": "2.0.8",
@@ -25,6 +25,7 @@
     "gatsby-link": "2.0.1",
     "gatsby-plugin-flow": "1.0.1",
     "gatsby-plugin-google-tagmanager": "2.0.5",
+    "gatsby-plugin-layout": "1.0.2",
     "gatsby-plugin-manifest": "2.0.3",
     "gatsby-plugin-netlify": "2.0.0",
     "gatsby-plugin-nprogress": "2.0.5",
@@ -38,6 +39,7 @@
     "jquery": "3.3.1",
     "lity": "2.3.1",
     "lodash": "4.17.11",
+    "node-sass": "4.9.3",
     "popper.js": "1.14.4",
     "react": "16.5.2",
     "react-dom": "16.5.2",
@@ -71,8 +73,8 @@
     "@lingui/babel-preset-react": "2.7.0",
     "@lingui/cli": "2.7.0",
     "babel-eslint": "9.0.0",
-    "eslint": "5.6.0",
-    "eslint-config-airbnb": "17.1.0",
+    "eslint": "4.19.1",
+    "eslint-config-airbnb": "16.1.0",
     "eslint-plugin-flowtype": "2.50.1",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
