--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gatsby-plugin-sass": "2.0.1",
     "gatsby-plugin-sharp": "2.0.5",
     "gatsby-plugin-sitemap": "2.0.1",
+    "gatsby-plugin-sri": "1.0.3",
     "gatsby-source-filesystem": "2.0.1",
     "gatsby-transformer-sharp": "2.1.2",
     "jquery": "3.3.1",
