--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gatsby-plugin-sri": "1.0.3",
     "gatsby-source-filesystem": "2.0.1",
     "gatsby-transformer-sharp": "2.1.2",
+    "isomorphic-fetch": "2.2.1",
     "jquery": "3.3.1",
     "lity": "2.3.1",
     "lodash": "4.17.11",
