--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "react": "16.5.2",
     "react-dom": "16.5.2",
     "react-helmet": "5.2.0",
-    "slick-carousel": "1.8.1"
+    "slick-carousel": "1.8.1",
+    "typeface-slabo-27px": "0.0.54",
+    "typeface-work-sans": "0.0.54"
   },
   "keywords": [
     "ledgy"
