--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-object-rest-spread": "7.0.0",
+    "@fortawesome/fontawesome-free-webfonts": "1.0.9",
     "@lingui/react": "2.7.0",
     "aos": "2.3.3",
     "babel-core": "7.0.0-bridge.0",
