--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gatsby-plugin-sitemap": "2.0.2",
     "gatsby-plugin-sri": "1.0.3",
     "gatsby-remark-copy-linked-files": "2.0.8",
+    "gatsby-remark-images": "3.0.1",
     "gatsby-source-filesystem": "2.0.8",
     "gatsby-transformer-remark": "2.1.17",
     "gatsby-transformer-sharp": "2.1.8",
