--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "main": "n/a",
   "scripts": {
     "build": "lingui compile && gatsby build",
+    "serve": "npm run build && gatsby serve",
     "start": "lingui compile && gatsby develop",
     "test": "lingui compile --strict && eslint . --ext jsx,js && flow",
     "extract": "lingui extract --clean"
