--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
+    "compile": "lingui compile",
     "build": "lingui compile && gatsby build",
     "serve": "npm run build && gatsby serve",
     "start": "lingui compile && gatsby develop",
