--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "@fortawesome/free-solid-svg-icons": "5.6.3",
     "@fortawesome/react-fontawesome": "0.1.4",
     "@lingui/react": "2.7.2",
+    "@mdx-js/mdx": "0.16.8",
+    "@mdx-js/tag": "0.16.8",
     "aos": "2.3.4",
     "babel-core": "7.0.0-bridge.0",
     "bootstrap": "4.1.3",
     "gatsby": "2.0.98",
     "gatsby-image": "2.0.28",
+    "gatsby-mdx": "0.3.5",
     "gatsby-plugin-catch-links": "2.0.9",
     "gatsby-plugin-flow": "1.0.2",
     "gatsby-plugin-google-tagmanager": "2.0.8",
