--- a/package.json
+++ b/package.json
@@ -21,42 +21,44 @@
     "@fortawesome/free-solid-svg-icons": "5.7.2",
     "@fortawesome/react-fontawesome": "0.1.4",
     "@lingui/react": "2.7.4",
-    "@mdx-js/mdx": "0.18.1",
+    "@mdx-js/mdx": "0.20.1",
     "@mdx-js/tag": "0.18.0",
     "aos": "2.3.4",
     "babel-core": "7.0.0-bridge.0",
     "bootstrap": "4.3.1",
-    "gatsby": "2.1.18",
-    "gatsby-image": "2.0.30",
+    "gatsby": "2.1.20",
+    "gatsby-image": "2.0.31",
     "gatsby-mdx": "0.4.0",
-    "gatsby-plugin-catch-links": "2.0.11",
+    "gatsby-plugin-catch-links": "2.0.12",
     "gatsby-plugin-flow": "1.0.2",
     "gatsby-plugin-google-tagmanager": "2.0.9",
     "gatsby-plugin-layout": "1.0.12",
-    "gatsby-plugin-manifest": "2.0.19",
+    "gatsby-plugin-manifest": "2.0.21",
     "gatsby-plugin-netlify": "2.0.11",
     "gatsby-plugin-netlify-cache": "1.1.0",
     "gatsby-plugin-nprogress": "2.0.8",
     "gatsby-plugin-offline": "2.0.24",
     "gatsby-plugin-react-helmet": "3.0.7",
     "gatsby-plugin-sass": "2.0.10",
-    "gatsby-plugin-sharp": "2.0.22",
+    "gatsby-plugin-sharp": "2.0.24",
     "gatsby-plugin-sitemap": "2.0.6",
-    "gatsby-plugin-sri": "1.0.5",
+    "gatsby-plugin-sri": "1.0.6",
     "gatsby-remark-copy-linked-files": "2.0.9",
+    "gatsby-remark-katex": "3.0.3",
     "gatsby-source-filesystem": "2.0.23",
     "gatsby-transformer-remark": "2.3.0",
-    "gatsby-transformer-sharp": "2.1.14",
+    "gatsby-transformer-sharp": "2.1.15",
     "isomorphic-fetch": "2.2.1",
     "jquery": "3.3.1",
+    "katex": "0.10.1",
     "lodash": "4.17.11",
     "node-sass": "4.11.0",
     "popper.js": "1.14.7",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-helmet": "5.2.0",
-    "typeface-slabo-27px": "0.0.54",
-    "typeface-work-sans": "0.0.54"
+    "typeface-slabo-27px": "0.0.72",
+    "typeface-work-sans": "0.0.72"
   },
   "keywords": [
     "ledgy"
@@ -73,7 +75,7 @@
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-react": "7.12.4",
-    "flow-bin": "0.93.0",
+    "flow-bin": "0.94.0",
     "prettier": "1.16.4"
   },
   "lingui": {
