--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gatsby-plugin-google-tagmanager": "2.0.9",
     "gatsby-plugin-layout": "1.0.12",
     "gatsby-plugin-manifest": "2.0.21",
+    "gatsby-plugin-mdx-prismjs": "1.0.4",
     "gatsby-plugin-netlify": "2.0.11",
     "gatsby-plugin-netlify-cache": "1.1.0",
     "gatsby-plugin-nprogress": "2.0.8",
