--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "gatsby-plugin-google-tagmanager": "2.0.9",
     "gatsby-plugin-layout": "1.0.12",
     "gatsby-plugin-manifest": "2.0.21",
-    "gatsby-plugin-mdx-prismjs": "1.0.4",
     "gatsby-plugin-netlify": "2.0.11",
     "gatsby-plugin-netlify-cache": "1.1.0",
     "gatsby-plugin-nprogress": "2.0.8",
@@ -46,8 +45,8 @@
     "gatsby-plugin-sri": "1.0.6",
     "gatsby-remark-copy-linked-files": "2.0.9",
     "gatsby-remark-katex": "3.0.3",
+    "gatsby-remark-prismjs": "3.2.4",
     "gatsby-source-filesystem": "2.0.23",
-    "gatsby-transformer-remark": "2.3.0",
     "gatsby-transformer-sharp": "2.1.15",
     "isomorphic-fetch": "2.2.1",
     "jquery": "3.3.1",
@@ -55,6 +54,7 @@
     "lodash": "4.17.11",
     "node-sass": "4.11.0",
     "popper.js": "1.14.7",
+    "prismjs": "1.15.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-helmet": "5.2.0",
