--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "edit": "micro -l tcp://0.0.0.0:$(((RANDOM % 65535)+1025)) flask_editor.js"
   },
   "dependencies": {
-    "@babel/plugin-proposal-object-rest-spread": "7.3.4",
-    "@fortawesome/fontawesome-svg-core": "1.2.15",
-    "@fortawesome/free-brands-svg-icons": "5.7.2",
-    "@fortawesome/free-solid-svg-icons": "5.7.2",
+    "@babel/plugin-proposal-object-rest-spread": "7.4.0",
+    "@fortawesome/fontawesome-svg-core": "1.2.17",
+    "@fortawesome/free-brands-svg-icons": "5.8.1",
+    "@fortawesome/free-solid-svg-icons": "5.8.1",
     "@fortawesome/react-fontawesome": "0.1.4",
     "@lingui/react": "2.7.4",
     "@mdx-js/mdx": "0.20.3",
@@ -27,28 +27,28 @@
     "aos": "2.3.4",
     "babel-core": "7.0.0-bridge.0",
     "bootstrap": "4.3.1",
-    "gatsby": "2.1.27",
-    "gatsby-image": "2.0.31",
-    "gatsby-mdx": "0.4.2",
-    "gatsby-plugin-catch-links": "2.0.12",
-    "gatsby-plugin-flow": "1.0.2",
-    "gatsby-plugin-google-tagmanager": "2.0.9",
-    "gatsby-plugin-layout": "1.0.12",
-    "gatsby-plugin-manifest": "2.0.22",
-    "gatsby-plugin-netlify": "2.0.11",
+    "gatsby": "2.2.10",
+    "gatsby-image": "2.0.34",
+    "gatsby-mdx": "0.4.4",
+    "gatsby-plugin-catch-links": "2.0.13",
+    "gatsby-plugin-flow": "1.0.4",
+    "gatsby-plugin-google-tagmanager": "2.0.10",
+    "gatsby-plugin-layout": "1.0.13",
+    "gatsby-plugin-manifest": "2.0.24",
+    "gatsby-plugin-netlify": "2.0.13",
     "gatsby-plugin-netlify-cache": "1.1.0",
-    "gatsby-plugin-nprogress": "2.0.9",
-    "gatsby-plugin-offline": "2.0.24",
-    "gatsby-plugin-react-helmet": "3.0.8",
-    "gatsby-plugin-sass": "2.0.10",
-    "gatsby-plugin-sharp": "2.0.25",
-    "gatsby-plugin-sitemap": "2.0.6",
+    "gatsby-plugin-nprogress": "2.0.10",
+    "gatsby-plugin-offline": "2.0.25",
+    "gatsby-plugin-react-helmet": "3.0.10",
+    "gatsby-plugin-sass": "2.0.11",
+    "gatsby-plugin-sharp": "2.0.30",
+    "gatsby-plugin-sitemap": "2.0.10",
     "gatsby-plugin-sri": "1.0.6",
-    "gatsby-remark-copy-linked-files": "2.0.9",
-    "gatsby-remark-katex": "3.0.3",
-    "gatsby-remark-prismjs": "3.2.4",
-    "gatsby-source-filesystem": "2.0.23",
-    "gatsby-transformer-sharp": "2.1.15",
+    "gatsby-remark-copy-linked-files": "2.0.11",
+    "gatsby-remark-katex": "3.0.4",
+    "gatsby-remark-prismjs": "3.2.6",
+    "gatsby-source-filesystem": "2.0.28",
+    "gatsby-transformer-sharp": "2.1.17",
     "isomorphic-fetch": "2.2.1",
     "jquery": "3.3.1",
     "katex": "0.10.1",
@@ -57,9 +57,9 @@
     "node-sass": "4.11.0",
     "popper.js": "1.14.7",
     "prism-themes": "1.0.1",
-    "prismjs": "1.15.0",
-    "react": "16.8.4",
-    "react-dom": "16.8.4",
+    "prismjs": "1.16.0",
+    "react": "16.8.5",
+    "react-dom": "16.8.5",
     "react-helmet": "5.2.0",
     "typeface-slabo-27px": "0.0.72",
     "typeface-work-sans": "0.0.72"
@@ -79,7 +79,8 @@
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-react": "7.12.4",
-    "flow-bin": "0.94.0",
+    "flow-bin": "0.95.1",
+    "npm-check-updates": "3.1.1",
     "prettier": "1.16.4"
   },
   "lingui": {
