--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "isomorphic-fetch": "2.2.1",
     "jquery": "3.3.1",
     "katex": "0.10.1",
+    "lity": "2.3.1",
     "lodash": "4.17.11",
     "micro": "9.3.3",
     "node-sass": "4.11.0",
