--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "@fortawesome/free-solid-svg-icons": "5.8.1",
     "@fortawesome/react-fontawesome": "0.1.4",
     "@lingui/react": "2.7.4",
-    "@mdx-js/mdx": "0.20.3",
-    "@mdx-js/tag": "0.20.3",
+    "@mdx-js/mdx": "1.0.15",
+    "@mdx-js/react": "1.0.15",
     "aos": "2.3.4",
     "babel-core": "7.0.0-bridge.0",
     "bootstrap": "4.3.1",
     "gatsby": "2.3.31",
     "gatsby-image": "2.0.40",
-    "gatsby-mdx": "0.4.2",
+    "gatsby-mdx": "0.6.2",
     "gatsby-plugin-catch-links": "2.0.13",
     "gatsby-plugin-flow": "1.0.5",
     "gatsby-plugin-google-tagmanager": "2.0.13",
