--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "gatsby-remark-copy-linked-files": "2.0.12",
     "gatsby-remark-katex": "3.0.4",
     "gatsby-remark-prismjs": "3.2.9",
+    "gatsby-source-contentful": "2.1.11",
     "gatsby-source-filesystem": "2.0.33",
     "gatsby-transformer-sharp": "2.1.19",
     "isomorphic-fetch": "2.2.1",
