--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "gatsby-remark-copy-linked-files": "2.1.3",
     "gatsby-remark-katex": "3.1.2",
     "gatsby-remark-prismjs": "3.3.3",
+    "gatsby-remark-unwrap-images": "1.0.1",
     "gatsby-source-contentful": "2.1.13",
     "gatsby-source-filesystem": "2.1.5",
     "gatsby-transformer-sharp": "2.2.3",
