--- a/.flowconfig
+++ b/.flowconfig
@@ -7,10 +7,5 @@ module.file_ext=.json
 module.file_ext=.css
 module.file_ext=.scss
 
-module.system.node.resolve_dirname=src
-module.system.node.resolve_dirname=node_modules
-
-
 [ignore]
-.*/node_modules/config-chain/test/broken.json
-.*/node_modules/@lingui/.*
+.*/node_modules/@lingui/react/index.js.flow
