--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,4 @@ public
 yarn-error.log
 
 *.mo
-src/locale/_build/
-src/locale/de/messages.js
-src/locale/en/messages.js
-src/locale/fr/messages.js
+src/locale/
