--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "./build.sh",
     "serve": "npm run build && gatsby serve",
     "start": "./start.sh",
-    "test": "npm run extract && lingui compile --strict && eslint . --ext jsx,js && flow",
+    "test": "eslint . --ext jsx,js && flow",
     "extract": "lingui extract --clean",
     "edit": "micro -l tcp://0.0.0.0:$(((RANDOM % 65535)+1025)) flask_editor.js"
   },
