Turn off import/prefer-default-export

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "browser": true
   },
   "rules": {
+    "import/prefer-default-export": ["off"],
     "react/require-default-props": "off",
     "prettier/prettier": [
       "error",
