--- a/package.json
+++ b/package.json
@@ -19,29 +19,29 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-object-rest-spread": "7.8.3",
-    "@fortawesome/fontawesome-svg-core": "1.2.26",
-    "@fortawesome/free-brands-svg-icons": "5.12.0",
-    "@fortawesome/free-solid-svg-icons": "5.12.0",
+    "@fortawesome/fontawesome-svg-core": "1.2.27",
+    "@fortawesome/free-brands-svg-icons": "5.12.1",
+    "@fortawesome/free-solid-svg-icons": "5.12.1",
     "@fortawesome/react-fontawesome": "0.1.8",
     "@lingui/react": "2.9.1",
-    "@mdx-js/mdx": "1.5.5",
-    "@mdx-js/react": "1.5.5",
+    "@mdx-js/mdx": "1.5.7",
+    "@mdx-js/react": "1.5.7",
     "aos": "2.3.4",
     "babel-core": "7.0.0-bridge.0",
     "bootstrap": "4.4.1",
-    "gatsby": "2.19.12",
-    "gatsby-image": "2.2.40",
-    "gatsby-plugin-catch-links": "2.1.25",
+    "gatsby": "2.19.22",
+    "gatsby-image": "2.2.41",
+    "gatsby-plugin-catch-links": "2.1.26",
     "gatsby-plugin-flow": "1.1.19",
     "gatsby-plugin-layout": "1.1.22",
-    "gatsby-plugin-manifest": "2.2.41",
-    "gatsby-plugin-mdx": "1.0.70",
-    "gatsby-plugin-netlify": "2.1.32",
+    "gatsby-plugin-manifest": "2.2.42",
+    "gatsby-plugin-mdx": "1.0.74",
+    "gatsby-plugin-netlify": "2.1.33",
     "gatsby-plugin-netlify-cache": "1.2.0",
     "gatsby-plugin-nprogress": "2.1.19",
-    "gatsby-plugin-offline": "3.0.34",
+    "gatsby-plugin-offline": "3.0.35",
     "gatsby-plugin-react-helmet": "3.1.22",
-    "gatsby-plugin-sass": "2.1.28",
+    "gatsby-plugin-sass": "2.1.29",
     "gatsby-plugin-sharp": "2.4.5",
     "gatsby-plugin-sitemap": "2.2.27",
     "gatsby-plugin-web-font-loader": "1.0.4",
@@ -49,9 +49,9 @@
     "gatsby-remark-katex": "3.1.24",
     "gatsby-remark-prismjs": "3.3.31",
     "gatsby-remark-unwrap-images": "1.0.1",
-    "gatsby-source-contentful": "2.1.85",
+    "gatsby-source-contentful": "^2.1.88",
     "gatsby-source-filesystem": "2.1.48",
-    "gatsby-transformer-sharp": "2.3.14",
+    "gatsby-transformer-sharp": "2.3.16",
     "isomorphic-fetch": "2.2.1",
     "katex": "0.11.1",
     "lity": "2.4.0",
@@ -61,8 +61,8 @@
     "popper.js": "1.16.1",
     "prism-themes": "1.3.0",
     "prismjs": "1.19.0",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
+    "react": "16.13.0",
+    "react-dom": "16.13.0",
     "react-helmet": "5.2.1",
     "react-transition-group": "4.3.0",
     "typeface-open-sans": "0.0.75"
@@ -82,8 +82,8 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-prettier": "3.1.2",
     "eslint-plugin-react": "7.18.3",
-    "flow-bin": "0.117.0",
-    "npm-check-updates": "4.0.1",
+    "flow-bin": "0.119.1",
+    "npm-check-updates": "4.0.2",
     "prettier": "1.19.1"
   },
   "lingui": {
