--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "aos": "2.3.4",
     "babel-core": "7.0.0-bridge.0",
     "bootstrap": "4.4.1",
-    "gatsby": "2.19.22",
-    "gatsby-image": "2.2.41",
+    "gatsby": "2.19.24",
+    "gatsby-image": "2.2.42",
     "gatsby-plugin-catch-links": "2.1.26",
     "gatsby-plugin-flow": "1.1.19",
     "gatsby-plugin-layout": "1.1.22",
@@ -48,7 +48,7 @@
     "gatsby-remark-katex": "3.1.24",
     "gatsby-remark-prismjs": "3.3.31",
     "gatsby-remark-unwrap-images": "1.0.1",
-    "gatsby-source-contentful": "^2.1.88",
+    "gatsby-source-contentful": "2.1.89",
     "gatsby-source-filesystem": "2.1.48",
     "gatsby-transformer-sharp": "2.3.16",
     "isomorphic-fetch": "2.2.1",
@@ -82,7 +82,7 @@
     "eslint-plugin-prettier": "3.1.2",
     "eslint-plugin-react": "7.18.3",
     "flow-bin": "0.119.1",
-    "npm-check-updates": "4.0.2",
+    "npm-check-updates": "4.0.3",
     "prettier": "1.19.1"
   },
   "lingui": {
