--- a/package.json
+++ b/package.json
@@ -91,7 +91,8 @@
     "srcPathDirs": [
       "src/pages",
       "src/components",
-      "src/layouts"
+      "src/layouts",
+      "src/helpers"
     ],
     "format": "po",
     "extractBabelOptions": {
