--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/free-brands-svg-icons": "5.12.1",
     "@fortawesome/free-solid-svg-icons": "5.12.1",
     "@fortawesome/react-fontawesome": "0.1.8",
+    "@ledgy/pricing": "1.4.2",
     "@lingui/react": "2.9.1",
     "@mdx-js/mdx": "1.5.7",
     "@mdx-js/react": "1.5.7",
@@ -53,7 +54,6 @@
     "gatsby-transformer-sharp": "2.3.16",
     "isomorphic-fetch": "2.2.1",
     "katex": "0.11.1",
-    "ledgy-pricing": "1.2.0",
     "lity": "2.4.0",
     "lodash": "4.17.15",
     "micro": "9.3.4",
