Change repository name

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Ledgy Landing Page",
   "version": "1.0.0",
   "author": "Ledgy AG <contact@ledgy.com>",
-  "repository": "morloy/ledgy-app",
+  "repository": "Ledgy/ledgy.com",
   "license": "MIT",
   "main": "n/a",
   "scripts": {
