--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "prism-themes": "1.5.0",
     "prismjs": "1.23.0",
     "react": "17.0.1",
+    "react-awesome-reveal": "3.4.0",
     "react-dom": "17.0.1",
     "react-helmet": "6.1.0",
     "react-transition-group": "4.4.1",
