--- a/package.json
+++ b/package.json
@@ -18,21 +18,21 @@
     "edit": "micro -l tcp://0.0.0.0:$(((RANDOM % 65535)+1025)) flask_editor.js"
   },
   "dependencies": {
-    "@babel/core": "7.12.10",
-    "@babel/plugin-proposal-object-rest-spread": "7.12.1",
-    "@emotion/react": "11.1.5",
-    "@fortawesome/fontawesome-svg-core": "1.2.34",
-    "@fortawesome/free-brands-svg-icons": "5.15.2",
-    "@fortawesome/free-solid-svg-icons": "5.15.2",
+    "@babel/core": "^7.14.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.14.2",
+    "@emotion/react": "^11.4.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "0.1.14",
     "@ledgy/pricing": "2.0.6",
-    "@lingui/core": "3.4.0",
-    "@lingui/macro": "3.4.0",
-    "@lingui/react": "3.4.0",
+    "@lingui/core": "^3.8.10",
+    "@lingui/macro": "^3.8.10",
+    "@lingui/react": "^3.8.10",
     "@mdx-js/mdx": "1.6.22",
     "@mdx-js/react": "1.6.22",
     "aos": "2.3.4",
-    "babel-plugin-macros": "3.0.1",
+    "babel-plugin-macros": "^3.1.0",
     "babel-plugin-remove-graphql-queries": "2.15.0",
     "bootstrap": "4.6.0",
     "gatsby": "2.31.1",
@@ -56,18 +56,18 @@
     "gatsby-source-filesystem": "2.10.0",
     "gatsby-transformer-sharp": "2.11.0",
     "isomorphic-fetch": "3.0.0",
-    "katex": "0.12.0",
+    "katex": "^0.13.11",
     "lity": "2.4.1",
-    "lodash": "4.17.20",
+    "lodash": "^4.17.21",
     "make-plural": "6.2.2",
     "micro": "9.3.4",
     "node-sass": "4.14.1",
     "popper.js": "1.16.1",
-    "prism-themes": "1.5.0",
+    "prism-themes": "^1.7.0",
     "prismjs": "1.23.0",
-    "react": "17.0.1",
-    "react-awesome-reveal": "3.4.0",
-    "react-dom": "17.0.1",
+    "react": "^17.0.2",
+    "react-awesome-reveal": "^3.7.1",
+    "react-dom": "^17.0.2",
     "react-helmet": "6.1.0",
     "react-transition-group": "4.4.1",
     "react-visibility-sensor": "5.1.1",
@@ -79,25 +79,25 @@
     "ledgy"
   ],
   "devDependencies": {
-    "@lingui/cli": "3.4.0",
+    "@lingui/cli": "^3.8.10",
     "@types/mdx-js__react": "1.5.3",
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
-    "@types/react-helmet": "6.1.0",
-    "@types/react-transition-group": "4.4.0",
+    "@types/react": "^17.0.5",
+    "@types/react-dom": "^17.0.5",
+    "@types/react-helmet": "^6.1.1",
+    "@types/react-transition-group": "^4.4.1",
     "@types/resize-observer-browser": "0.1.5",
-    "@typescript-eslint/eslint-plugin": "4.14.1",
-    "@typescript-eslint/parser": "4.14.1",
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
+    "@typescript-eslint/parser": "^4.24.0",
     "babel-eslint": "10.1.0",
-    "eslint": "7.19.0",
+    "eslint": "^7.26.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "7.2.0",
-    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-import": "^2.23.2",
     "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-prettier": "3.3.1",
-    "eslint-plugin-react": "7.22.0",
-    "npm-check-updates": "11.1.1",
-    "prettier": "2.2.1",
-    "typescript": "4.1.3"
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
+    "npm-check-updates": "^11.5.13",
+    "prettier": "^2.3.0",
+    "typescript": "^4.2.4"
   }
 }
