--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-remove-graphql-queries": "2.15.0",
     "bootstrap": "4.6.0",
-    "gatsby": "2.31.1",
+    "gatsby": "^3.5.0",
     "gatsby-image": "2.10.0",
     "gatsby-plugin-catch-links": "2.9.0",
     "gatsby-plugin-layout": "1.9.0",
