--- a/package.json
+++ b/package.json
@@ -26,42 +26,42 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "0.1.14",
     "@ledgy/pricing": "2.0.6",
-    "@lingui/core": "^3.8.10",
-    "@lingui/macro": "^3.8.10",
-    "@lingui/react": "^3.8.10",
+    "@lingui/core": "^3.9.0",
+    "@lingui/macro": "^3.9.0",
+    "@lingui/react": "^3.9.0",
     "@mdx-js/mdx": "1.6.22",
     "@mdx-js/react": "1.6.22",
     "aos": "2.3.4",
     "babel-plugin-macros": "^3.1.0",
-    "babel-plugin-remove-graphql-queries": "2.15.0",
-    "bootstrap": "4.6.0",
+    "babel-plugin-remove-graphql-queries": "^3.5.0",
+    "bootstrap": "^5.0.1",
     "gatsby": "^3.5.0",
-    "gatsby-image": "2.10.0",
-    "gatsby-plugin-catch-links": "2.9.0",
-    "gatsby-plugin-layout": "1.9.0",
-    "gatsby-plugin-manifest": "2.11.0",
-    "gatsby-plugin-mdx": "1.9.0",
-    "gatsby-plugin-netlify": "2.10.0",
+    "gatsby-image": "^3.5.0",
+    "gatsby-plugin-catch-links": "^3.5.0",
+    "gatsby-plugin-layout": "^2.5.0",
+    "gatsby-plugin-manifest": "^3.5.0",
+    "gatsby-plugin-mdx": "^2.5.0",
+    "gatsby-plugin-netlify": "^3.5.0",
     "gatsby-plugin-netlify-cache": "1.2.0",
-    "gatsby-plugin-nprogress": "2.9.0",
-    "gatsby-plugin-offline": "3.9.0",
-    "gatsby-plugin-react-helmet": "3.9.0",
-    "gatsby-plugin-sass": "3.1.0",
-    "gatsby-plugin-sharp": "2.13.3",
-    "gatsby-plugin-sitemap": "2.11.0",
-    "gatsby-remark-copy-linked-files": "2.9.0",
-    "gatsby-remark-prismjs": "3.12.0",
+    "gatsby-plugin-nprogress": "^3.5.0",
+    "gatsby-plugin-offline": "^4.5.0",
+    "gatsby-plugin-react-helmet": "^4.5.0",
+    "gatsby-plugin-sass": "^4.5.0",
+    "gatsby-plugin-sharp": "^3.5.0",
+    "gatsby-plugin-sitemap": "^4.1.0",
+    "gatsby-remark-copy-linked-files": "^4.2.0",
+    "gatsby-remark-prismjs": "^5.2.0",
     "gatsby-remark-unwrap-images": "1.0.2",
-    "gatsby-source-contentful": "4.5.2",
-    "gatsby-source-filesystem": "2.10.0",
-    "gatsby-transformer-sharp": "2.11.0",
+    "gatsby-source-contentful": "^5.5.0",
+    "gatsby-source-filesystem": "^3.5.0",
+    "gatsby-transformer-sharp": "^3.5.0",
     "isomorphic-fetch": "3.0.0",
     "katex": "^0.13.11",
     "lity": "2.4.1",
     "lodash": "^4.17.21",
     "make-plural": "6.2.2",
     "micro": "9.3.4",
-    "node-sass": "4.14.1",
+    "node-sass": "^6.0.0",
     "popper.js": "1.16.1",
     "prism-themes": "^1.7.0",
     "prismjs": "1.23.0",
@@ -79,7 +79,7 @@
     "ledgy"
   ],
   "devDependencies": {
-    "@lingui/cli": "^3.8.10",
+    "@lingui/cli": "^3.9.0",
     "@types/mdx-js__react": "1.5.3",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.5",
