--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,7 @@
     "plugin:prettier/recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
-    "prettier/react",
+    "prettier",
   ],
   "plugins": [
     "@typescript-eslint"
