--- a/.eslintrc
+++ b/.eslintrc
@@ -45,26 +45,7 @@
   },
   "settings": {
     "react": {
-      "createClass": "createReactClass",
-      "pragma": "React",
-      "fragment": "Fragment",
-      "version": "detect",
-      "flowVersion": "0.53"
-    },
-    "propWrapperFunctions": [
-        "forbidExtraProps",
-        {"property": "freeze", "object": "Object"},
-        {"property": "myFavoriteWrapper"}
-    ],
-    "componentWrapperFunctions": [
-        "observer",
-        {"property": "styled"},
-        {"property": "observer", "object": "Mobx"},
-        {"property": "observer", "object": "<pragma>"}
-    ],
-    "linkComponents": [
-      "Hyperlink",
-      {"name": "Link", "linkAttribute": "to"}
-    ]
+      "version": "detect"
+    }
   }
 }
