--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,7 @@
     "plugin:prettier/recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
-    "prettier",
+    "prettier"
   ],
   "plugins": [
     "@typescript-eslint"
@@ -41,7 +41,7 @@
     "no-shadow":"off",
     "@typescript-eslint/no-shadow": "error",
     "no-use-before-define": "off",
-    "@typescript-eslint/no-use-before-define": "error",
+    "@typescript-eslint/no-use-before-define": "error"
   },
   "settings": {
     "react": {
