--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
           key: dependency-cache-{{ checksum "package-lock.json" }}
       - run:
           name: install-npm-wee
-          command: npm install
+          command: npm install && npm run extract
       - save_cache:
           key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
