--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "gatsby-plugin-manifest": "3.5.0",
     "gatsby-plugin-mdx": "2.5.0",
     "gatsby-plugin-netlify": "3.5.0",
-    "gatsby-plugin-netlify-cache": "1.2.0",
     "gatsby-plugin-nprogress": "3.5.0",
     "gatsby-plugin-offline": "4.5.0",
     "gatsby-plugin-react-helmet": "4.5.0",
@@ -83,6 +82,7 @@
   ],
   "devDependencies": {
     "@lingui/cli": "3.9.0",
+    "@netlify/plugin-gatsby": "1.0.1",
     "@types/mdx-js__react": "1.5.3",
     "@types/react": "17.0.6",
     "@types/react-dom": "17.0.5",
