--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "gatsby-remark-unwrap-images": "1.0.2",
     "gatsby-source-contentful": "5.5.0",
     "gatsby-source-filesystem": "3.5.0",
+    "gatsby-source-greenhouse": "3.0.0",
     "gatsby-transformer-sharp": "3.5.0",
     "isomorphic-fetch": "3.0.0",
     "katex": "0.13.11",
@@ -63,6 +64,7 @@
     "make-plural": "6.2.2",
     "micro": "9.3.4",
     "node-sass": "6.0.0",
+    "patch-package": "6.4.7",
     "popper.js": "1.16.1",
     "prism-themes": "1.7.0",
     "prismjs": "1.24.0",
