--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
+    "postinstall": "patch-package",
     "compile": "lingui compile",
     "build": "./build.sh",
     "serve": "npm run build && gatsby serve",
