--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
   "devDependencies": {
     "@lingui/cli": "3.9.0",
     "@netlify/plugin-gatsby": "1.0.1",
+    "@types/d3-selection": "3.0.1",
     "@types/mdx-js__react": "1.5.3",
     "@types/react": "17.0.6",
     "@types/react-dom": "17.0.5",
