--- a/package.json
+++ b/package.json
@@ -18,18 +18,18 @@
     "edit": "micro -l tcp://0.0.0.0:$(((RANDOM % 65535)+1025)) flask_editor.js"
   },
   "dependencies": {
-    "@babel/core": "7.14.3",
-    "@babel/plugin-proposal-object-rest-spread": "7.14.2",
-    "@emotion/react": "11.4.0",
+    "@babel/core": "7.16.5",
+    "@babel/plugin-proposal-object-rest-spread": "7.16.5",
+    "@emotion/react": "11.7.1",
     "@emotion/serialize": "1.0.2",
-    "@fortawesome/fontawesome-svg-core": "1.2.35",
-    "@fortawesome/free-brands-svg-icons": "5.15.3",
-    "@fortawesome/free-solid-svg-icons": "5.15.3",
+    "@fortawesome/fontawesome-svg-core": "1.2.36",
+    "@fortawesome/free-brands-svg-icons": "5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "0.1.14",
     "@ledgy/pricing": "2.0.6",
-    "@lingui/core": "3.9.0",
-    "@lingui/macro": "3.9.0",
-    "@lingui/react": "3.9.0",
+    "@lingui/core": "3.13.0",
+    "@lingui/macro": "3.13.0",
+    "@lingui/react": "3.13.0",
     "@mdx-js/mdx": "1.6.22",
     "@mdx-js/react": "1.6.22",
     "aos": "2.3.4",
@@ -37,13 +37,13 @@
     "babel-plugin-remove-graphql-queries": "3.5.0",
     "bootstrap": "4.6.0",
     "gatsby": "3.5.0",
-    "gatsby-image": "3.5.0",
+    "gatsby-image": "3.11.0",
     "gatsby-plugin-catch-links": "3.5.0",
     "gatsby-plugin-image": "1.5.0",
     "gatsby-plugin-layout": "2.5.0",
     "gatsby-plugin-manifest": "3.5.0",
     "gatsby-plugin-mdx": "2.5.0",
-    "gatsby-plugin-netlify": "3.5.0",
+    "gatsby-plugin-netlify": "3.14.0",
     "gatsby-plugin-nprogress": "3.5.0",
     "gatsby-plugin-offline": "4.5.0",
     "gatsby-plugin-react-helmet": "4.5.0",
@@ -65,13 +65,13 @@
     "micro": "9.3.4",
     "node-sass": "6.0.0",
     "popper.js": "1.16.1",
-    "prism-themes": "1.7.0",
+    "prism-themes": "1.9.0",
     "prismjs": "1.25.0",
     "react": "17.0.2",
-    "react-awesome-reveal": "3.7.1",
+    "react-awesome-reveal": "3.8.1",
     "react-dom": "17.0.2",
     "react-helmet": "6.1.0",
-    "react-transition-group": "4.4.1",
+    "react-transition-group": "4.4.2",
     "react-visibility-sensor": "5.1.1",
     "react-wordcloud": "1.2.7",
     "remark": "13.0.0",
@@ -84,13 +84,13 @@
   ],
   "devDependencies": {
     "@lingui/cli": "3.9.0",
-    "@netlify/plugin-gatsby": "1.0.1",
-    "@types/d3-selection": "3.0.1",
-    "@types/mdx-js__react": "1.5.3",
-    "@types/react": "17.0.6",
-    "@types/react-dom": "17.0.5",
-    "@types/react-helmet": "6.1.1",
-    "@types/react-transition-group": "4.4.1",
+    "@netlify/plugin-gatsby": "1.0.3",
+    "@types/d3-selection": "3.0.2",
+    "@types/mdx-js__react": "1.5.5",
+    "@types/react": "17.0.38",
+    "@types/react-dom": "17.0.11",
+    "@types/react-helmet": "6.1.5",
+    "@types/react-transition-group": "4.4.4",
     "@types/resize-observer-browser": "0.1.5",
     "@typescript-eslint/eslint-plugin": "4.24.0",
     "@typescript-eslint/parser": "4.24.0",
@@ -98,12 +98,12 @@
     "eslint": "7.26.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-import": "2.23.2",
-    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-prettier": "3.4.0",
-    "eslint-plugin-react": "7.23.2",
+    "eslint-plugin-react": "7.28.0",
     "npm-check-updates": "11.5.13",
-    "prettier": "2.3.0",
-    "typescript": "4.2.4"
+    "prettier": "2.5.1",
+    "typescript": "4.5.4"
   }
 }
