add Ledgistats function for hibob

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,9 @@
 [build]
-command = "npm run build"
-publish = "public/"
+  command = "npm run build"
+  publish = "public/"
+
+[functions]
+  directory = "src/netlify/functions"
 
 [[plugins]]
-package = "@netlify/plugin-gatsby"
+  package = "@netlify/plugin-gatsby"
