--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@lingui/react": "3.13.0",
     "@mdx-js/mdx": "1.6.22",
     "@mdx-js/react": "1.6.22",
+    "@netlify/functions": "0.10.0",
     "aos": "2.3.4",
     "babel-plugin-macros": "3.1.0",
     "babel-plugin-remove-graphql-queries": "3.5.0",
@@ -86,6 +87,7 @@
     "@lingui/cli": "3.9.0",
     "@netlify/plugin-gatsby": "1.0.3",
     "@types/d3-selection": "3.0.2",
+    "@types/lodash.get": "4.4.6",
     "@types/mdx-js__react": "1.5.5",
     "@types/react": "17.0.38",
     "@types/react-dom": "17.0.11",
@@ -94,6 +96,7 @@
     "@types/resize-observer-browser": "0.1.5",
     "@typescript-eslint/eslint-plugin": "4.24.0",
     "@typescript-eslint/parser": "4.24.0",
+    "api": "4.1.3",
     "babel-eslint": "10.1.0",
     "eslint": "7.26.0",
     "eslint-config-airbnb": "18.2.1",
@@ -102,6 +105,8 @@
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "7.28.0",
+    "lodash.get": "4.4.2",
+    "netlify-cli": "8.6.0",
     "npm-check-updates": "11.5.13",
     "prettier": "2.5.1",
     "typescript": "4.5.4"
