added two new components

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-plugin-macros": "3.1.0",
     "babel-plugin-remove-graphql-queries": "3.5.0",
     "bootstrap": "4.6.0",
+    "framer-motion": "^6.3.3",
     "gatsby": "3.5.0",
     "gatsby-image": "3.11.0",
     "gatsby-plugin-catch-links": "3.5.0",
@@ -72,6 +73,7 @@
     "react-awesome-reveal": "3.8.1",
     "react-dom": "17.0.2",
     "react-helmet": "6.1.0",
+    "react-scroll": "1.8.7",
     "react-transition-group": "4.4.2",
     "react-visibility-sensor": "5.1.1",
     "react-wordcloud": "1.2.7",
@@ -91,6 +93,7 @@
     "@types/react": "17.0.38",
     "@types/react-dom": "17.0.11",
     "@types/react-helmet": "6.1.5",
+    "@types/react-scroll": "1.8.3",
     "@types/react-transition-group": "4.4.4",
     "@types/resize-observer-browser": "0.1.5",
     "@typescript-eslint/eslint-plugin": "4.24.0",
