--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-plugin-macros": "3.1.0",
     "babel-plugin-remove-graphql-queries": "3.5.0",
     "bootstrap": "4.6.0",
+    "framer-motion": "^6.3.3",
     "gatsby": "3.5.0",
     "gatsby-image": "3.11.0",
     "gatsby-plugin-catch-links": "3.5.0",
