--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-awesome-reveal": "3.8.1",
     "react-dom": "17.0.2",
     "react-helmet": "6.1.0",
+    "react-scroll": "^1.8.7",
     "react-transition-group": "4.4.2",
     "react-visibility-sensor": "5.1.1",
     "react-wordcloud": "1.2.7",
