--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react": "17.0.2",
     "react-awesome-reveal": "3.8.1",
     "react-dom": "17.0.2",
+    "react-fast-marquee": "^1.3.2",
     "react-helmet": "6.1.0",
     "react-transition-group": "4.4.2",
     "react-visibility-sensor": "5.1.1",
