--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react": "17.0.2",
     "react-awesome-reveal": "3.8.1",
     "react-dom": "17.0.2",
+    "react-fast-marquee": "1.3.2",
     "react-helmet": "6.1.0",
     "react-popper-tooltip": "4.4.2",
     "react-scroll": "1.8.7",
