--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "babel-plugin-macros": "3.1.0",
     "babel-plugin-remove-graphql-queries": "3.5.0",
     "bootstrap": "4.6.0",
-    "framer-motion": "^6.3.3",
+    "framer-motion": "6.3.16",
     "gatsby": "3.5.0",
     "gatsby-image": "3.11.0",
     "gatsby-plugin-catch-links": "3.5.0",
@@ -76,6 +76,7 @@
     "react-helmet": "6.1.0",
     "react-popper-tooltip": "4.4.2",
     "react-scroll": "1.8.7",
+    "react-tooltip": "4.2.21",
     "react-transition-group": "4.4.2",
     "react-visibility-sensor": "5.1.1",
     "react-wordcloud": "1.2.7",
